1.4 View a main menu of options